# cryptohash-sha256

./: .gitignore  .travis.yml  cabal.haskell-ci  cabal.project  changelog.md  cryptohash-sha256.cabal
.github/workflows/: haskell-ci.yml  simple.yml
Bench/: Bench.hs  BenchAPI.hs
Crypto/Hash/: SHA256.hs
Tests/: KAT.hs
cbits/: hs_sha256.h  sha256.c  sha256.h
src/: Compat.hs
src-bench/: bench-sha256.hs
src-exe/: sha256sum.hs
src-pure/Crypto/Hash/: SHA256.hs
src-tests/: test-sha256.hs
src/Crypto/Hash/: SHA256.hs
src/Crypto/Hash/SHA256/: FFI.hs
